# CG

./: .clang-format  .gitignore  CG_Questions.txt  CMakeLists.txt  LICENSE
Practicum/: CMakeLists.txt
Practicum/.hiddendir/P4-Geometry_shader/: CMakeLists.txt  main.cpp
Practicum/.hiddendir/P4-Geometry_shader/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
Practicum/.hiddendir/P4-Geometry_shader/task/: CG_P4.tex  example.txt  tests.txt
Practicum/.hiddendir/P6-Tessellation/: CMakeLists.txt
Practicum/.hiddendir/P6-Tessellation/include/: scene.hpp
Practicum/.hiddendir/P6-Tessellation/src/: scene.cpp
Practicum/.hiddendir/P7-3D_model/: CMakeLists.txt
Practicum/.hiddendir/P7-3D_model/src/: model.cpp  shader.h
Practicum/.hiddendir/P7-3D_model/task/: CG_P4.tex
Practicum/P0-Getting_started/: CG_P0_windows.tex
Practicum/P0-Getting_started/.hiddenfir/Linux/WithoutIDE/: 1.c  2.c
Practicum/P0-Getting_started/Linux/WithoutIDE/: SoftWareRequirements.txt
Practicum/P0-Getting_started/Linux/install_vscodium/: install_vscodium.sh  install_vsix.sh
Practicum/P0-Getting_started/Linux/install_vscodium/CG_P2/: CMakeLists.txt  main
Practicum/P0-Getting_started/Windows/CG_P2/: main.c
Practicum/P0-Getting_started/Windows/L0_old/: lab0.cpp
Practicum/P1-Fragment_shader/: P1-Flags.glsl  P1-Task-Flags.md  cg_p1_flags.glsl  escape-time_fractals.glsl  star.glsl
Practicum/P1-Fragment_shader-OpenGL/: CMakeLists.txt  main.cpp
Practicum/P1-Fragment_shader-OpenGL/shaders/: fragment.glsl  vertex.glsl
Practicum/P1-Fragment_shader-Vulkan/: CMakeLists.txt  README.txt  main.cpp
Practicum/P1-Fragment_shader-Vulkan/shaders/: shader_base.frag  shader_base.vert
Practicum/P1-Fragment_shader/.hiddendir/Flags/: russia.py
Practicum/P1-Fragment_shader/.hiddendir/test/shaders/: fragment.glsl
Practicum/P1-Fragment_shader/Tests/test/: draw.cpp  main.cpp
Practicum/P1-Fragment_shader/additional_examples/: P1-Russian_flag.glsl  star.glsl
Practicum/P1-Fragment_shader/example/: P1-South_Korea_flag.glsl  description.txt
Practicum/P1-Fragment_shader/examples/: escape-time_fractals.glsl  star.glsl
Practicum/P1-Fragment_shader/task/: .gitignore  P1-Flag_task.tex  P1-Flags_task.tex
Practicum/P2-Geometric_primitives/: .gitignore  CMakeLists.txt  geometric_primitives.cpp  main.c  main.cpp
Practicum/P2-Geometric_primitives/.hiddendir/: CMakePresets.json  settings.json_
Practicum/P2-Geometric_primitives/CG_P2/: CMakeLists.txt  main.c  main.cpp
Practicum/P2-Geometric_primitives/shaders/: fragment.glsl  vertex.glsl
Practicum/P2-Geometric_primitives/task/: CG_P2.tex
Practicum/P3-Texture/: CMakeLists.txt  main.c  main.cpp
Practicum/P3-Texture/CG_P3/: CMakeLists.txt  main.c
Practicum/P3-Texture/CG_P3/shaders/: fragment.glsl  vertex.glsl
Practicum/P3-Texture/shaders/: fragment.glsl  vertex.glsl
Practicum/P3-Texture/task/: CG_P3.tex
Practicum/P4-3D_model/: CMakeLists.txt
Practicum/P4-3D_model/CG_P4/: CMakeLists.txt
Practicum/P4-3D_model/CG_P4/objects/: Planet.mtl
Practicum/P4-3D_model/CG_P4/shaders/: fragment.glsl
Practicum/P4-3D_model/CG_P4/src/: main.cpp  mesh.cpp
Practicum/P4-3D_model/assets/: planet.gltf
Practicum/P4-3D_model/shaders/: vertex.glsl
Practicum/P4-3D_model/src/: main.cpp
Practicum/P4-3D_model/task/: CG_P4.tex
Practicum/P4-Geometry_shader/: CMakeLists.txt  main.cpp
Practicum/P4-Geometry_shader/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
Practicum/P4-Geometry_shader/task/: example.txt  tests.txt
Practicum/P5-3D_model/: CMakeLists.txt
Practicum/P5-3D_model/shaders/: fragment.glsl  vertex.glsl
Practicum/P5-3D_model/src/: main.cpp  model.cpp
Practicum/P5-3D_model/task/: CG_P5.tex
Practicum/P5-Geometry_pattern/: CMakeLists.txt
Practicum/P5-Geometry_pattern/shaders/: geometry_pattern_cs.glsl
Practicum/P5-Geometry_pattern/src/: application.cpp  main.cpp  shader.cpp  shader.hpp
Practicum/P5-Geometry_pattern/task/: CG_P5.tex
Practicum/P5-Geometry_shader/: main.cpp
Practicum/P5-Geometry_shader/CG_P5/: CMakeLists.txt
Practicum/P5-Geometry_shader/CG_P5/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
Practicum/P5-Geometry_shader/shaders/: geometry.glsl  vertex.glsl
Practicum/P6-Geometry_pattern/shaders/: render_fs.glsl  render_vs.glsl
Practicum/P6-Geometry_pattern/src/: application.hpp  shader_program_impl.hpp
Practicum/P6-Geometry_pattern/task/: CG_P6.tex
Practicum/P6-Tessellation/: .gitignore
Practicum/P6-Tessellation/CG_P6/: CMakeLists.txt  main.cpp
Practicum/P6-Tessellation/CG_P6/include/: scene.hpp
Practicum/P6-Tessellation/CG_P6/shaders/: fragment.glsl  geometry.glsl  tess_control.glsl  tess_eval.glsl  vertex.glsl
Practicum/P6-Tessellation/CG_P6/src/: icosahedron.cpp  main.cpp  scene.cpp  shader.cpp  shader_program.hpp
Practicum/P6-Tessellation/include/: icosahedron.hpp  shader.hpp
Practicum/P6-Tessellation/shaders/: tess_control.glsl  tess_eval.glsl  vertex.glsl
Practicum/P6-Tessellation/src/: icosahedron.cpp  main.cpp
Practicum/P7-3D_model/src/: mesh.h  model.cpp  model.h  shader.cpp
Practicum/cmake/: FileUtils.cmake
Projects/: .gitignore  CMakeLists.txt
Projects/include/: cube.hpp  scene.hpp  shader_program.hpp
Projects/samples/Fractals/: main.cpp
Projects/samples/Fractals/shaders/: fragment.glsl
Projects/samples/P1-test/: main.cpp
Projects/samples/P1-test/shaders/: fragment.glsl  vertex.glsl
Projects/samples/cube_tessellation/: main.cpp
Projects/samples/cube_tessellation/shaders/: geometry.glsl  tess_control.glsl  tess_evaluation.glsl  vertex.glsl
Projects/samples/fractals/: main.cpp
Projects/samples/fractals/include/: js_scene.hpp  ms_scene.hpp
Projects/samples/fractals/shaders/: js_fragment.glsl  ms_fragment.glsl  vertex.glsl
Projects/samples/icosahedron_tessellation/: main.cpp
Projects/samples/icosahedron_tessellation/shaders/: fragment.glsl  geometry.glsl  vertex.glsl
Projects/scripts/: png2gif.txt
Projects/src/: cube.cpp  scene.cpp  shader.cpp  utah_teapot.c
Vulkan/: lists.txt
Vulkan/P-Time2triangle/: CMakeLists.txt  README.txt  main.cpp
(+57 files in other folders)
